<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_coded_string_name"
        android:padding="12dp"
        android:textSize="42dp"
        android:shadowColor="#2196F3"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/numUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toTopOf="@id/responseEditTextName"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/primeFactorizerNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/prime_intro"
        android:textColor="@color/primeColors"
        android:textSize = "48sp"
        app:layout_constraintBottom_toTopOf="@id/responseEditTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/responseEditTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:hint="What's your name?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox"
        app:layout_constraintTop_toTopOf="@id/textBox" />

    <EditText
        android:id="@+id/notificationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Favorite number?"
        app:layout_constraintBottom_toBottomOf="@id/textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="@+id/responseEditTextName"
        app:layout_constraintRight_toRightOf="@+id/responseEditTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickButton"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationNumber"
        app:layout_constraintTop_toTopOf="@id/responseEditTextName"
        app:layout_constraintVertical_bias="0.492" />

    <Button
        android:id="@+id/primeFactorizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button_factorizer"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationNumber"
        app:layout_constraintTop_toTopOf="@id/responseEditTextName"
        app:layout_constraintVertical_bias="0.496" />
</androidx.constraintlayout.widget.ConstraintLayout>